Bugzilla:463026-hibernate exception adding from multiple template cause cache is cleared Plus: add zoneAdministration and addGuestAccess rights, remove siteAdministration right.  Add access control to zoneConfig